# Data-Clustering

./: DataClustering.slnx  README.md
DataClustering/: CMakeLists.txt  DataClustering.vcxproj  DataClustering.vcxproj.filters  Kmeans.h  Point.h  main.cpp
DataClustering/include/: Kmeans.h  Point.h
DataClustering/output/: output_ecoli.txt  output_glass.txt  output_ionosphere.txt  output_iris_bezdek.txt  output_landsat.txt  output_letter_recognition.txt  output_segmentation.txt  output_vehicle.txt  output_wine.txt  output_yeast.txt
DataClustering/src/: Kmeans.cpp  Point.cpp  main.cpp
